# ncs-gpu

./: .cursorignore  .gitignore  AGENTS.md  AUDIT_REPORT_CODEBASE_ANALYSIS.md  CPU_GPU_Optimization_Cloaking_Redesign.md  GPU-OP-PROMPT.md  GPU_Mining_Memory_Allocation_Fix_Design.md  GPU_OPTIMIZATION_MIGRATION_PLAN.md  OBFUSCATION_ISOLATION_STRATEGY.md  PHASE3_PERFORMANCE_VALIDATION_REPORT.md  PORMPT.md  README.MD  STEALTH_GPU_CPU_INTEGRATION_PLAN.md  agent.md  app-gpu-refactor-plan.md  document.md  final-solution-unified.md  generate_amp_wrappers.py  giai-thich-pp-tut-hash.md  hashrate-fix-solution.md  log_loi.md  optimization_cloaking_integration_summary.md  phan-tich-agents-01.md  phan-tich-agents-02.md  phan-tich-agents-03.md  phan-tich-agents-04.md  pr.md  prompt-agent.md  prompt-task.md  prompt.md  purge-auggie.sh  purge-bonsai-cli.sh  root_cause_analysis_report.md  security-report.md  simple_integration_test.py  startup_errors_analysis_report.md  tai-lieu-phan-tich-agents-khac.md  task.md  test_fixes.py  test_mining.sh  (+7 more)
app-gpu-00/common/job-core/: Cargo.toml
app-gpu-sonnet-4/: Cargo.toml  README.md  config.toml  docker-compose.yml
app-gpu-sonnet-4/scripts/: build.sh
app-gpu-sonnet-4/src/: lib.rs
app-gpu-sonnet-4/src/config/: mod.rs
app-gpu-sonnet-4/src/core/: event_types.rs  mod.rs
app-gpu-sonnet-4/src/gpu/: mod.rs
app-gpu-sonnet-4/src/resource/: mod.rs
app-gpu-sonnet-4/src/utils/: error.rs  mod.rs
app-gpu-sonnet-4/src/workers/: mod.rs
app-gpu/common/nats-lite/: Cargo.toml
app-gpu/core/: Cargo.toml
app-gpu/core/benches/: benchmark.rs
app-gpu/core/src/compliance/: mod.rs
app-gpu/core/src/error/: mod.rs
app-gpu/core/src/health/: mod.rs
app-gpu/core/src/logging/: mod.rs
app-gpu/core/src/metrics/: mod.rs
app-gpu/core/src/optimization/: mod.rs
app-gpu/core/src/runtime/: mod.rs
app-gpu/core/src/tracing/: mod.rs
app-gpu/core/tests/: integration_test.rs
app-ws/: ARCHITECTURE_ANALYSIS.md  Cargo.toml  Dockerfile
app-ws/config/: default.toml
app-ws/src/: lib.rs  main.rs
app-ws/src/core/: engine.rs  gpu_pool.rs  mod.rs  plugin_api.rs  scheduler.rs
app-ws/src/plugins/: cloaking.rs  metrics.rs  mining.rs  mod.rs
app-ws/src/utils/: config.rs  crypto.rs  logging.rs  mod.rs
app/app-gpu/: .dockerignore  .env.example  .gitignore  ANALYSIS_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BAO-CAO-KY-THUAT-MINING-GPU.md  CMakeLists.txt  Cargo.toml  DEPLOYMENT-COMPLETE-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DETECTION.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  GPU_TOOLS_EXPLAINED.md  HUONG_DAN_SU_DUNG.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION_REPORT.md  INDEX.md  INFRASTRUCTURE.md  LICENSE  MIGRATION_GUIDE.md  MINING_CONFIG.md  Makefile  NETWORK_OBFUSCATION_ANALYSIS.md  PHAN_TICH_PROXY_MINING.md  PHASE3_ARCHITECTURE.md  PRODUCTION-ROADMAP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE_EXPLAINED.md  PROJECT_SUMMARY.md  QUICK-DEVELOPER-GUIDE.md  QUICK-START.md  QUICKSTART.md  README.md  README_FINAL.txt  (+24 more)
app/app-gpu/.cargo/: config.toml
app/app-gpu/.github/workflows/: ci-cd.yml  ci.yml
app/app-gpu/.windsurf/rules/: context-gathering.md  cursor-coding-style.md  (+3 more)
app/app-gpu/app-gpu/: Cargo.toml  Makefile  OBFUSCATION-COMPARISON.md  OBFUSCATION-README.md
app/app-gpu/ci/: pipeline.yml
app/app-gpu/config/: app.toml  config.toml  default.toml  miner_config.json  orchestrator.yaml  seccomp.json
app/app-gpu/configs/: config.toml.template  default.yaml  policy.rego  rbac.yaml
app/app-gpu/cpp/: CMakeLists.txt
app/app-gpu/deployments/: docker-compose.yml
app/app-gpu/docker/: Dockerfile.control  Dockerfile.inference  Dockerfile.orchestrator  Dockerfile.redteam  Dockerfile.telemetry  Dockerfile.ubuntu-cuda  docker-compose.redteam.yml  docker-compose.yml
app/app-gpu/docs/: API_REFERENCE.md  ARCHITECTURE_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  PRODUCTION-PHASE-GUIDE.md  PRODUCTION_DEPLOYMENT.md  TECHNICAL_REPORT.md  USER_GUIDE.md  architecture.md  architecture_diagram.txt  baseline_gpu.csv  baseline_latency.json  baseline_report.md  ci_validation.md  config-mapping.md  dependency_map.md  hot_path.md  implementation_plan.md  production-readiness.md  production-ready-phases.md  security-policy.md  shadow_traffic_plan.md  technical_report.md  toolchain_versions.md
app/app-gpu/go/: go.mod  go.sum
app/app-gpu/gpu-tools/: go.mod
app/app-gpu/include/: evasion.h  pool_client.h  types.h  utils.h
app/app-gpu/infrastructure/: health.rs
app/app-gpu/kernels/: CMakeLists.txt  gemm.cl
app/app-gpu/kubernetes/: config.yml  deployment.yml  hpa-pdb.yml  namespace.yml  service.yml
app/app-gpu/monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
app/app-gpu/obfuscation/: Cargo.toml
app/app-gpu/observability/: otel-collector.yaml
app/app-gpu/proto/: coordinator.proto
app/app-gpu/python/: mining_core_wrapper.py  mining_wrapper.py
app/app-gpu/rust/: Cargo.toml
app/app-gpu/scripts/: benchmark.sh  bootstrap.sh  build-release.sh  build.sh  build_redteam.sh  build_release.sh  deploy.sh  dev.sh  generate-sbom.sh  install.sh  monolith_latency_probe.py  package-release.sh  poll_metrics.py  run_docker.sh  run_local.sh  seccomp-profile.json  setup-cosign.sh  sign-container.sh  start.sh  verify-binary.sh
app/app-gpu/security/: Cargo.toml  apparmor-gpu-miner  dast.yaml  sast.yaml  sbom.md  seccomp-gpu-miner.json
app/app-gpu/src/: app.rs  cli.rs  config.rs  core.rs  error.rs  lib.rs  main.cpp  main.rs  mining.rs  monitoring.rs  networking.rs  production.rs  production_main.rs  runtime.rs  simple_main.rs  stealth.rs
app/app-gpu/tests/: basic.rs
app/phase3-performance/: Cargo.toml
app/phase3-performance/benches/: phase3_gpu_smoothing.rs  phase3_stealth_performance.rs
app/simple-gpu/: Cargo.toml  sample_config.toml
app/simple-gpu/src/: main.rs
performance-validation/: Cargo.toml  phase3_compliance_report.md  run_phase3_validation.sh
performance-validation/benches/: phase3_critical_validation.rs
performance-validation/src/: lib.rs
(+1012 files in other folders)
