[workspace]
members = ["src"]
resolver = "2"

[workspace.package]
name = "app-gpu"
version = "0.1.0"
edition = "2021"
authors = ["GPU Mining Team"]
description = "High-performance GPU mining with event-driven architecture"
license = "MIT"
repository = "https://github.com/opus-gpu/app-gpu"
rust-version = "1.75"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Message bus
async-nats = "0.33"
nats = "0.25"

# GPU and CUDA
cudarc = { version = "0.10", features = ["std", "cublas", "curand", "cusolver"] }
cuda-driver-sys = "0.3"
nvidia-ml-rs = "0.9"

# Async and concurrency
futures = "0.3"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }

# Security and crypto
rustls = "0.22"
rustls-native-certs = "0.7"
ring = "0.17"
zeroize = "1.7"

# System integration
nix = "0.27"
libc = "0.2"
procfs = "0.16"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Num CPUs
num_cpus = "1.16"

# Testing and development
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
mockall = "0.12"

[package]
name = "app-gpu"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
async-nats.workspace = true
nats.workspace = true
cudarc.workspace = true
nvidia-ml-rs.workspace = true
futures.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
config.workspace = true
clap.workspace = true
rustls.workspace = true
ring.workspace = true
zeroize.workspace = true
nix.workspace = true
libc.workspace = true
procfs.workspace = true
uuid.workspace = true
num_cpus.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
mockall.workspace = true
tokio-test = "0.4"

[[bench]]
name = "event_throughput"
harness = false

[[bench]]
name = "gpu_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.bench]
opt-level = 3
debug = true
codegen-units = 1
lto = true
