[workspace]
members = [
    ".",
    "plugins/*",
]
resolver = "2"

[package]
name = "opus-gpu-engine"
version = "0.1.0"
edition = "2021"
authors = ["Opus GPU Team"]
description = "High-performance GPU mining engine with modular plugin architecture"
license = "Proprietary"
repository = "https://github.com/opus-gpu/app-gpu"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# GPU Management
nvml-wrapper = "0.10"
cuda-sys = "0.2"

# Plugin System
libloading = "0.8"
dlopen2 = "0.5"
once_cell = "1.19"

# Performance & Concurrency
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
num_cpus = "1.16"

# Memory Management
bytes = "1.5"
memmap2 = "0.9"
shared_memory = "0.12"

# Security
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
zeroize = "1.7"

# Metrics & Monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

[[bin]]
name = "opus-gpu"
path = "src/main.rs"

[lib]
name = "opus_gpu_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = ["gpu-metrics", "cloaking", "auto-tune"]
gpu-metrics = []
cloaking = []
auto-tune = []
debug-mode = []

[workspace.dependencies]
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }