[package]
name = "phase3-performance-validation"
version = "0.1.0"
edition = "2021"
authors = ["Performance Validation System"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"  # For statistical analysis
sha2 = "0.10"  # For crypto simulation
humantime = "2.1"

[[bench]]
name = "phase3_critical_validation"
harness = false
