[package]
name = "opus-gpu-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "opus-gpu"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Plugin system  
libloading = { workspace = true }
dlopen = { workspace = true }

# IPC
shared_memory = { workspace = true }
capnp = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# Configuration
config = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
color-eyre = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Utilities
crossbeam = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
