[package]
name = "gpu-miner-core"
version = "0.1.0"
edition = "2021"
authors = ["Security Research Team"]
description = "GPU Mining Core với stealth capabilities cho nghiên cứu bảo mật"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# GPU interaction
opencl3 = "0.9"
cuda-sys = "0.2"

# Cryptography & Mining
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
ethash = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls"] }

# System interaction
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal", "user"] }
libc = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.13"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security & Obfuscation
ring = "0.17"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"

# Process management
daemonize = "0.5"
ctrlc = "3.4"

[dev-dependencies]
criterion = "0.5"
mockito = "1.2"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 2

[[bin]]
name = "gpu-miner"
path = "src/main.rs"

[lib]
name = "gpu_miner_core"
crate-type = ["cdylib", "rlib"]
