[workspace]
members = [
    "crates/mining-core",
    "crates/stealth-layer",
    "crates/coordination",
    "crates/security",
    "crates/cli",
]

resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Odyssey AI System <noreply@research.ai>"]
license = "MIT"
repository = "https://github.com/research/opus-gpu"

[workspace.dependencies]
# Async runtime (runtime bất đồng bộ – xử lý I/O không chặn)
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization (tuần tự hóa – chuyển đổi dữ liệu)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling (xử lý lỗi – quản lý exception)
anyhow = "1.0"
thiserror = "1.0"

# Logging (ghi nhật ký – tracking events)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking (mạng – kết nối network)
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.23"

# Crypto (mật mã – mã hóa/hash)
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# GPU/CUDA bindings (liên kết GPU/CUDA – gọi CUDA từ Rust)
cuda-runtime-sys = "0.3.0-alpha.1"

# CLI (giao diện dòng lệnh – command-line interface)
clap = { version = "4.5", features = ["derive", "env"] }

# Security (bảo mật – sandbox/isolation)
nix = { version = "0.29", features = ["process", "signal", "user"] }

# Performance (hiệu năng – tối ưu hóa)
rayon = "1.10"

# Utilities (tiện ích – helper functions)
once_cell = "1.19"
lazy_static = "1.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"

# Testing utilities (tiện ích kiểm thử – test frameworks)
proptest = "1.4"
test-case = "3.3"
rstest = "0.18"

[profile.release]
opt-level = 3              # Maximum optimization (tối ưu tối đa)
lto = "fat"                # Link-Time Optimization (tối ưu liên kết)
codegen-units = 1          # Single codegen unit (đơn vị mã hóa đơn)
strip = true               # Strip debug symbols (loại bỏ symbol debug)
panic = "abort"            # Abort on panic (dừng khi panic)

[profile.dev]
opt-level = 0              # No optimization for fast compile (không tối ưu để biên dịch nhanh)
debug = true               # Include debug info (bao gồm thông tin debug)
