[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appgpu"
version = "0.1.0"
description = "GPU mining orchestration platform refactored with Clean Architecture"
requires-python = ">=3.10"
authors = [{name = "GPU Architecture Team", email = "arch@gpu.local"}]
readme = "README.md"
license = {text = "Proprietary"}
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.6",
  "numpy>=1.26",
  "scipy>=1.11",
  "orjson>=3.10",
  "rich>=13.7",
  "opentelemetry-api==1.23.0",
  "opentelemetry-sdk==1.23.0",
  "opentelemetry-instrumentation-fastapi==0.44b0",
  "prometheus-client>=0.19",
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4.0",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest-cov>=5.0",
  "faker>=25.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-ra --maxfail=1"
