[package]
name = "phase3-performance"
version = "0.1.0"
edition = "2021"
authors = ["Performance Validation System"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
humantime = "2.1"
statrs = "0.16"  # For statistical analysis
reqwest = { version = "0.12", features = ["json"] }  # For network tests
sha2 = "0.10"  # For crypto simulation

# Add path dependencies to the existing crates (using workspace paths)
mining-core = { path = "../app-gpu/crates/mining-core" }
stealth-layer = { path = "../app-gpu/crates/stealth-layer" }
security = { path = "../app-gpu/crates/security" }

