[package]
name = "simple-opus-gpu"
version = "2.0.0"
edition = "2021"
authors = ["OPUS-GPU Team"]
description = "Simplified high-performance GPU mining system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System info
num_cpus = "1.16"
sys-info = "0.9"

# Random
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "simple-opus-gpu"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true