[package]
name = "job-core"
version = "0.1.0"
edition = "2021"
description = "Job model và storage abstraction cho Opus GPU"
license = "Proprietary"

[features]
default = []
redis-store = ["redis"]

[dependencies]
async-trait = "0.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
