[package]
name = "nats-lite"
version = "0.1.0"
edition = "2021"
description = "Lightweight async NATS client for job scheduler/executor"
license = "Proprietary"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1"
