[package]
name = "gpu-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime cho concurrency
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Logging và telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SHA-256 implementation an toàn
sha2 = "0.10"

# GPU integration với wgpu
wgpu = "0.19"
wgpu-hal = "0.19"

# Serialization cho config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation cho mining
rand = "0.8"

# Metrics collection
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Channel communication
futures = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Security và validation
regex = "1.10"
lazy_static = "1.5"

# OBFUSCATION DEPENDENCIES
# String encryption - mã hóa chuỗi hằng số
obfstr = "0.4"

# Note: Anti-debugging utilities không cần external crates - implemented internally

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false

[profile.release-obfuscated]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
