[package]
name = "opus-gpu-obfuscation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code obfuscation and anti-reverse engineering module for OPUS-GPU"

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rand.workspace = true
sha2.workspace = true
hex = "0.4"

# String obfuscation
obfstr = "0.4"
const-str = "0.5"

# Binary manipulation
goblin = "0.8"
object = "0.32"

# Crypto for obfuscation
aes = "0.8"
cbc = "0.1"
block-modes = "0.9"

# Control flow obfuscation
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

# LLVM obfuscation (optional)
llvm-sys = { version = "170", optional = true }

# Packing and compression
flate2 = "1.0"
lzma = "0.4"

# Anti-debugging
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "debugapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["ptrace", "signal"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = ["string-obfuscation", "control-flow", "anti-debug"]
string-obfuscation = ["obfstr"]
control-flow = ["syn", "quote"]
binary-packing = ["flate2", "lzma"]
anti-debug = []
llvm-passes = ["llvm-sys"]
full-obfuscation = ["string-obfuscation", "control-flow", "binary-packing", "anti-debug"]