[package]
name = "opus-gpu-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Security hardening and protection module for OPUS-GPU"

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
bytes.workspace = true
dashmap.workspace = true

# Security & Cryptography
ring = "0.17"
rustls = "0.22"
rustls-webpki = "0.102"
webpki-roots = "0.26"
secrecy = { version = "0.8", features = ["serde", "alloc"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2.workspace = true
blake3.workspace = true

# Memory Protection
mlock = "0.2"
page_size = "0.6"
memoffset = "0.9"

# Process Isolation (Unix-specific)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal", "user", "mount"] }
caps = "0.5"
seccomp-sys = "0.2"

# Network Security
socket2 = { version = "0.5", features = ["all"] }
trust-dns-resolver = "0.23"

# Anti-tampering
crc32fast = "1.3"
sha1 = "0.10"
hex = "0.4"

[features]
default = ["memory-protection", "process-isolation", "network-security"]
memory-protection = []
process-isolation = []
network-security = ["rustls", "trust-dns-resolver"]
anti-tampering = ["crc32fast", "sha1"]
strict-mode = ["memory-protection", "process-isolation", "network-security", "anti-tampering"]

[build-dependencies]
cc = "1.0"