[package]
name = "app-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
app-gpu-domain = { path = "../../internal/domain" }
app-gpu-scheduler = { path = "../../internal/scheduler" }
telemetry-hub = { path = "../../pkg/telemetry" }
gpu-bindings = { path = "../../gpu/bindings" }

[features]
default = ["grpc", "rest"]
grpc = []
rest = []

[[bin]]
name = "app-gpu"
path = "src/main.rs"
