[package]
name = "gpu-worker"
version = "2.0.0"
edition = "2021"
authors = ["GPU Mining Team"]
description = "High-performance GPU mining worker với RVN support"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# GPU Computing
cudarc = "0.10"  # CUDA bindings cho Rust
opencl3 = "0.9"  # OpenCL support
nvml-wrapper = "0.9"  # NVIDIA Management Library

# Cryptography & Mining
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
ethash = "0.7"  # Ethash algorithm
kawpow = "0.2"  # KawPoW cho RVN

# Networking
tonic = "0.10"  # gRPC
prost = "0.12"
hyper = { version = "1.1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
once_cell = "1.19"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
num_cpus = "1.4"
bytemuck = "1.14"

[build-dependencies]
tonic-build = "0.10"
cc = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[[bin]]
name = "gpu-worker"
path = "src/main.rs"

[[bench]]
name = "mining_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[features]
default = ["cuda", "opencl"]
cuda = ["cudarc"]
opencl = ["opencl3"]
benchmark = []
