[package]
name = "audit"
version = "0.1.0"
edition = "2021"
description = "Audit logging utilities"
license = "Proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync", "io-util"] }
tracing = "0.1"
