[package]
name = "job-core"
version = "0.1.0"
edition = "2021"
authors = ["Opus GPU Team"]
description = "Core job abstractions for GPU task management"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"