[package]
name = "secret-manager"
version = "0.1.0"
edition = "2021"
description = "Caching secret provider abstraction for Opus GPU"
license = "Proprietary"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "fs"] }
tracing = "0.1"
