[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
description = "Control-plane scheduler service for GPU job orchestration"
license = "Proprietary"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
