[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
description = "Control-plane scheduler service for GPU job orchestration"
license = "Proprietary"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
nats-lite = { path = "../../common/nats-lite" }
uuid = { version = "1", features = ["v4"] }
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false, features = ["http-listener"] }
once_cell = "1"
headers = "0.4"
job-core = { path = "../../common/job-core" }
audit = { path = "../../common/audit" }
secret-manager = { path = "../../common/secret-manager" }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["tls12"] }
rustls-pemfile = "1"
