[package]
name = "opus-gpu-mining"
version = "1.0.0"
edition = "2021"
authors = ["OPUS-GPU Team <opus-gpu@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
crossbeam = "0.8"

# GPU computing and CUDA
# Note: These would need actual implementations or mocks
# opus-gpu-gpu = { path = "../../infrastructure/gpu" }
# opus-gpu-bus = { path = "../../infrastructure/bus" }

# Cryptography - KawPow algorithm support
sha2 = "0.10"
sha3 = "0.10"
blake3 = "0.4"
keccak = "0.1"
ethash = "0.3"

# Mining specific
stratum = "0.2"
byteorder = "1.5"
hex = "0.4"
rand = "0.8"

# GPU and memory management
memmap2 = "0.9"
numa = "0.2"

# Performance and monitoring
metrics = "0.22"
histogram = "0.6"
perf-event = "0.4"

# Process management
libc = "0.2"
nix = "0.27"

# Configuration hot-reload
notify = "6.1"

[features]
cuda = []
opencl = []
vulkan = []
webgpu = []