[package]
name = "opus-gpu-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OPUS-GPU monitoring and observability module"

[dependencies]
# Core Dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot = "0.12"
dashmap.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

# Metrics & Monitoring
prometheus.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# System Information
sysinfo = "0.29"

# Configuration
config.workspace = true

# Storage
sqlx.workspace = true

# GPU specific
nvml-wrapper = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["prometheus", "opentelemetry"]
prometheus = []
opentelemetry = []
nvidia = ["nvml-wrapper"]