[package]
name = "opus-gpu-pool"
version = "1.0.0"
edition = "2021"
authors = ["OPUS-GPU Team <opus-gpu@example.com>"]
license = "MIT"
repository = "https://github.com/opus-gpu/opus-gpu"
rust-version = "1.75.0"
description = "Pool communication module with Stratum protocol support and multi-pool management"

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# TLS/SSL Support
tokio-native-tls = "0.3"
native-tls = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"

# Metrics
metrics = "0.22"

# Cryptography
sha2 = "0.10"
blake3 = "0.4"

# Encoding
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
wiremock = "0.5"
tokio-test = "0.4"